fixed menu quries, add z-index of top button, fixed play in our game button

--- a/css/css-index.css
+++ b/css/css-index.css
@@ -48,7 +48,7 @@ body {
 
 /*  POCZATEK SEKCJI BURGERA */
 
-@media only screen and (max-width: 568px) {
+@media only screen and (max-width: 615px) {
 
     .logo {
         display: none;
@@ -101,7 +101,7 @@ input#menu {
 .menu-content {
     max-height: 0;
     overflow: hidden;
-    width: 130px;
+    width: 200px;
 }
 
 .dropdown-menu {
@@ -152,7 +152,7 @@ input:checked ~ .menu-content {
     position: fixed; /* Fixed/sticky position */
     bottom: 20px; /* Place the button at the bottom of the page */
     right: 20px; /* Place the button 30px from the right */
-    z-index: 1; /* Make sure it does not overlap */
+    z-index: 11; /* Make sure it does not overlap */
     border: none; /* Remove borders */
     outline: none; /* Remove outline */
     background-color: var(--secondaryColour); /* Set a background color */
@@ -168,7 +168,7 @@ input:checked ~ .menu-content {
   }
 
 
-@media only screen and (min-width: 569px) {
+@media only screen and (min-width: 615px) {
 
 #burger-container {
     display: none;
@@ -602,7 +602,7 @@ input:checked ~ .menu-content {
     text-align: center;
 }
 
-@media only screen and (min-width: 569px) {
+@media only screen and (min-width: 615px) {
     .hero__container {  
         width: 100%; 
         height: 70vh;
